refactor: Optimize event handling and set operations
Extract the event handling logic into the independent method processEvent to avoid code duplication
Use removeFirst instead of remove(0) to improve code readability
Optimize the import and usage methods of Collections